--- a/Android/BikeBuds/app/src/main/res/layout/activity_main.xml
+++ b/Android/BikeBuds/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
-    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
+    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
         <Button
@@ -14,8 +14,20 @@
             android:layout_height="wrap_content"
             android:text="Start Ride"
             android:id="@+id/startRide"
-            android:layout_gravity="center" />
-    </FrameLayout>
+            android:layout_gravity="center"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Hardware is not connected!"
+            android:id="@+id/hardwareConnectionStatus"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_above="@+id/startRide"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
          this as a sliding drawer on the left side for left-to-right
