--- a/Android/BikeBuds/app/src/main/res/layout/activity_main.xml
+++ b/Android/BikeBuds/app/src/main/res/layout/activity_main.xml
@@ -9,15 +9,6 @@
     <RelativeLayout android:id="@+id/container" android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Start Solo Ride"
-            android:id="@+id/startRide"
-            android:layout_gravity="center"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,7 +16,7 @@
             android:text="Not connected to light pack!"
             android:id="@+id/hardwareConnectionStatus"
             android:layout_gravity="center_horizontal|top"
-            android:layout_above="@+id/startRide"
+            android:layout_above="@+id/linearLayout"
             android:layout_centerHorizontal="true" />
 
         <TextView
@@ -38,23 +29,43 @@
             android:layout_above="@+id/hardwareConnectionStatus"
             android:layout_centerHorizontal="true" />
 
-        <Button
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start Server"
-            android:id="@+id/startServer"
-            android:layout_gravity="center"
-            android:layout_below="@+id/connectToServer"
-            android:layout_centerHorizontal="true" />
+            android:gravity="center"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/linearLayout">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Connect to Server"
-            android:id="@+id/connectToServer"
-            android:layout_gravity="center"
-            android:layout_below="@+id/startRide"
-            android:layout_centerHorizontal="true" />
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Start Solo Ride"
+                android:id="@+id/startRide"
+                android:layout_gravity="center"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
+
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Connect to Server"
+                android:id="@+id/connectToServer"
+                android:layout_gravity="center"
+                android:layout_below="@+id/startRide"
+                android:layout_centerHorizontal="true" />
+
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Start Server"
+                android:id="@+id/startServer"
+                android:layout_gravity="center"
+                android:layout_below="@+id/connectToServer"
+                android:layout_centerHorizontal="true" />
+        </LinearLayout>
+
     </RelativeLayout>
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
