--- a/Android/BikeBuds/app/src/main/res/layout/fragment_ride.xml
+++ b/Android/BikeBuds/app/src/main/res/layout/fragment_ride.xml
@@ -1,7 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    tools:context="com.dudeofawesome.bikebuds.BikeActivity">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" tools:context="com.dudeofawesome.bikebuds.RideFragment">
 
     <view
         android:layout_width="fill_parent"
@@ -10,4 +9,5 @@
         android:id="@+id/RidePainter"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
-</RelativeLayout>
+
+</FrameLayout>
