--- a/Android/BikeBuds/app/src/main/res/values/styles.xml
+++ b/Android/BikeBuds/app/src/main/res/values/styles.xml
@@ -1,8 +1,10 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="MaterialDrawerTheme.Light">
+        <item name="colorPrimary">@color/material_drawer_primary</item>
+        <item name="colorAccent">@color/material_drawer_accent</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
     </style>
 
 </resources>
